<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SGI</string>
    <!-- LOGIN -->
    <string name="login_btn_acceder">Iniciar sesión</string>
    <string name="login_prompt_correo">Correo Electrónico</string>
    <string name="login_correo">CORREO</string>
    <string name="login_contraseña">CONTRASEÑA</string>
    <string name="login_prompt_contraseña">Contraseña</string>
    <string name="login_contraseña_olvidada">He olvidado la contraseña</string>
    <string name="login_intro_datos">Introduce tus Datos de Acceso:</string>
    <string name="login_titulo">Acceso Sistema Incidencias</string>
    <string name="login_registrar">Crear Cuenta</string>
    <string name="login_resetar_contraseña">Restaurar Contraseña</string>
    <string name="login_inicioSesion">Mantener Sesión Iniciada</string>
    <!-- Activity Recordar Contraseña -->
    <string name="recordar_contraseña_">Restaurar Contraseña</string>

    <!-- REGISTRO -->
    <string name="registro_titulo">Registro</string>
    <string name="registro_btn_registrar">Registrar</string>
    <string name="registro_confirmar_contraseña">CONFIRMAR CONTRASEÑA</string>
    <string name="registro_login">¿Ya tienes una cuenta? Iniciar sesión</string>
    <string name="registro_nombre_apellidos_prompt">Nombre</string>
    <string name="registro_nombre">NOMBRE</string>
    <string name="registro_apellido">APELLIDOS</string>
    <string name="registro_apellidos_prompt">Apellidos</string>


    <!-- INICIO TUTORES MNT | PROFESORES MNT -->
    <string name="inicio_titulo">Inicio</string>
    <string name="inicio_panel_control">Panel de Control</string>
    <string name="inicio_crear_ticket">Crear Ticket</string>
    <string name="inicio_validar_ticket">Validar Ticket</string>
    <string name="inicio_estado_ticket">Estado Tickets</string>
    <string name="inicio_historial_ticket">Historial Tickets</string>
    <string name="inicio_cerrar_sesion">Cerrar sesión</string>

    <!-- AJUSTES -->
    <string name="ajustes_titulo">Editar</string>
    <string name="ajustes_nombre">NOMBRE</string>
    <string name="ajustes_nombre_prompt">Nombre de usuario</string>
    <string name="ajustes_cambiar_contraseña">CAMBIAR CONTRASEÑA</string>
    <string name="ajustes_contraseña_actual_prompt">Contraseña actual</string>
    <string name="ajustes_nueva_contraseña_prompt">Nueva contraseña</string>
    <string name="ajustes_confirmar_contraseña">Confirmar contraseña</string>
    <string name="ajustes_silenciar_notificaciones">Silenciar Notificaciones</string>
    <string name="ajustes_btn_guardar">Guardar</string>

    <!-- CREAR TICKET -->
    <string name="crear_ticket_titulo">Crear ticket</string>
    <string name="crear_ticket_aula">AULA</string>
    <string name="crear_ticket_aula_dropdown">Selecciona tu aula</string>
    <string name="crear_ticket_equipo">EQUIPO</string>
    <string name="crear_ticket_comentario">COMENTARIO</string>
    <string name="crear_ticket_comentario_prompt">Describe la incidencia.</string>
    <string name="crear_ticket_imagen">Imagen</string>
    <string name="crear_ticket_enviar_ticket">Enviar Ticket</string>
    <string name="crear_ticket_equipo_TextView">Equipo afectado</string>
    <string name="crear_ticket_titulo2">TITULO</string>
    <string name="crear_ticket_titulo_prompt">Especifica un titulo</string>


    <!-- PANEL CONTROL-->
    <string name="pc_btn_nuevos">Nuevos 10</string>
    <string name="pc_btn_urgentes">Urgentes 20</string>
    <string name="pc_btn_espera">En Espera 30</string>
    <string name="pc_btn_proceso">En Proceso 40</string>
    <string name="pc_titulo">Panel de Control</string>
    <!-- PANEL CONTROL - TICKET ABIERTO-->
    <string name="pc_ta_btn_cerrarTicket">Cerrar Ticket</string>
    <string name="pc_ta_btn_asignarTecnico">Asignar Tecnico</string>
    <string name="pc_ta_btn_ponerEnEspera">Poner en Espera</string>
    <string name="pc_ta_btn_Mover_Urgentes">Mover a Urgentes</string>
        <!--PANEL CONTROL - TICKET ABIERTO - ASIGNAR TECNICO-->
    <string name="asignar_tecnico_tecnico">Selecciona un técnico</string>
    <!-- APP BAR -->
    <string name="ajustes">Ajustes</string>

</resources>