<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <!-- Logo Comercio -->

    <ImageView
        android:id="@+id/registro_logo_comercio"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="75dp"
        android:contentDescription="logo_comercio"
        android:src="@drawable/logo_comercio" />
    <!-- REGISTRO Titulo -->
    <TextView
        android:id="@+id/registro_titulo"
        android:layout_width="296dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/mulish_ergular"
        android:gravity="center"
        android:text="@string/registro_titulo"
        android:textColor="@color/titulos"
        android:textSize="24sp"
        android:textStyle="bold" />
    <!-- REGISTRO - NOMBRE -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registro_const_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Texto NOMBRE -->
        <TextView
            android:id="@+id/registro_nombre"
            android:layout_width="296dp"
            android:layout_height="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/mulish_ergular"
            android:text="@string/registro_nombre"
            android:textColor="@color/label_color"
            android:textSize="12sp"
            android:textStyle="bold"
            app:helperTextEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!-- TextInputEditText Nombre -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registro_prompt_nombre"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:alpha="0.4"
            android:fontFamily="@font/mulish_ergular"
            android:textSize="14sp"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/azul_comercio"
            app:layout_constraintEnd_toEndOf="parent"
            app:counterMaxLength="35"
            app:layout_constraintTop_toBottomOf="@+id/registro_nombre">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registro_prompt_nombre_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registro_nombre_apellidos_prompt"
                android:textColor="@color/textfield_color"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- REGISTRO CORREO-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registro_const_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Texto Correo -->
        <TextView
            android:id="@+id/registo_correo"
            android:layout_width="296dp"
            android:layout_height="24dp"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/mulish_ergular"
            android:text="@string/login_correo"
            android:textColor="@color/label_color"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!-- InputEditText Correo -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registro_prompt_correo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:alpha="0.4"
            android:fontFamily="@font/mulish_ergular"
            android:textSize="14sp"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registo_correo">>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registro_prompt_correo_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_prompt_correo"
                android:inputType="textEmailAddress"
                android:textColor="@color/textfield_color"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Texto CONTRASEÑA -->
        <TextView
            android:id="@+id/registro_contraseña"
            android:layout_width="296dp"
            android:layout_height="24dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/mulish_ergular"
            android:text="@string/login_contraseña"
            android:textColor="@color/label_color"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registro_prompt_correo" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registro_prompt_contraseña"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:alpha="0.4"
            android:fontFamily="@font/mulish_ergular"
            android:textSize="14sp"
            app:boxBackgroundMode="outline"
            app:passwordToggleEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:layout_constraintTop_toBottomOf="@+id/registro_contraseña">>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registro_prompt_contraseña_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_prompt_contraseña"
                android:inputType="textPassword"
                android:textColor="@color/textfield_color"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- Registro Boton Registrar -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registro_btn_registrar"
        android:layout_width="296dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_azul"
        android:fontFamily="@font/mulish_ergular"
        android:gravity="center"
        android:text="@string/registro_btn_registrar"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_prompt_contraseña" />

    <TextView
        android:id="@+id/registro_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:alpha="0.4"
        android:clickable="true"
        android:fontFamily="@font/mulish_ergular"
        android:gravity="center_horizontal"
        android:text="@string/registro_login"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/registro_btn_registrar"
        app:layout_constraintTop_toTopOf="parent" />
</LinearLayout>
