<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".panelControl"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:outlineAmbientShadowColor="@color/white"
        android:outlineSpotShadowColor="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/mainToolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/crear_ticket_logo_comercio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="75dp"
        android:contentDescription="logo_comercio"
        android:src="@drawable/logo_comercio_v2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/marg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/pc_btn_nuevos"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="24dp"
            android:background="@drawable/btn_verde_borde"
            android:fontFamily="@font/mulish_ergular"
            android:padding="10dp"
            android:text="@string/pc_btn_nuevos"
            android:textColor="@color/verde"
            android:textSize="12dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/pc_btn_proceso"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/btn_amarillo_borde"
            android:fontFamily="@font/mulish_ergular"
            android:padding="3dp"
            android:text="@string/pc_btn_proceso"
            android:textColor="@color/amarillo"
            android:textSize="12dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/pc_btn_urgentes"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/pc_btn_espera"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/btn_azul_oscuro_borde"
            android:fontFamily="@font/mulish_ergular"
            android:padding="10dp"
            android:text="@string/pc_btn_espera"
            android:textColor="@color/azul"
            android:textSize="12dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/pc_btn_proceso"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/pc_btn_urgentes"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/btn_rojo_borde"
            android:fontFamily="@font/mulish_ergular"
            android:text="@string/pc_btn_urgentes"
            android:textColor="@color/rojo"
            android:textSize="12dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/pc_btn_nuevos"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <FrameLayout
        android:id="@+id/panel_control_frame"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>
</LinearLayout>